# master-replicator

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/agents/: architect-agent.md  engineer-agent.md  pm-agent.md  po-agent.md  po-agent.md:Zone.Identifier
.claude/state/: adr.md  feature-request.md  requirements.md  tasks.json
.claude/state/archive/archive-history/: feature-request.md  tasks.json
.claude/state/archive/pipeline-status-cli/: tasks.json  worktrees.json
.claude/state/archive/v3-final/: requirements.md
.claude/state/archive/watch-mode/: worktrees.json
.claude/state/runs/diff/: adr.md  feature-request.md  requirements.md  tasks.json
.claude/state/runs/docker/: adr.md  feature-request.md  requirements.md  tasks.json
.claude/state/runs/helm/: adr.md  feature-request.md  requirements.md  tasks.json
.github/workflows/: docker-publish.yml  helm-publish.yml
charts/pipeline-status/: .helmignore  Chart.yaml  README.md  values.yaml
charts/pipeline-status/templates/: NOTES.txt  _helpers.tpl  cronjob.yaml  serviceaccount.yaml
pipeline_status/: __main__.py  archive.py  diff_archives.py  format_diff.py  format_history.py  formatting.py  history.py  inspectors.py  restore.py  stage.py  watch.py
tests/: test_archive.py  test_diff_archives.py  test_dockerfile.py  test_format_diff.py  test_format_history.py  test_formatting.py  test_formatting_helpers.py  test_formatting_smoke.py  test_helm_chart.py  test_history.py  test_inspectors.py  test_main_subcommands.py  test_restore.py  test_stage.py  test_watch.py
(+4 files in other folders)
